Include build/build_config.h in all component updater files.

All files using conditional compilation must include the build_config,
otherwise the platform symbols are not defined.

BUG=684950

Review-Url: https://codereview.chromium.org/2655813002
Cr-Commit-Position: refs/heads/master@{#446050}

Former-commit-id: 96d71e0c6c152a39ee9b452c96428af7cc4520bc